# Trucash

./: Cargo.toml
db/chain_params/: data.mdb  lock.mdb
db/utxos/: data.mdb  lock.mdb
db/wallet/: data.mdb  lock.mdb
trucash/: database.rs  error.rs  init.rs  main.rs  transaction.rs  wallet.rs
trucash/crypto/: mod.rs  schnorr.rs
